Improve Javadoc